<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.geekk.taskmanager.view.AddTaskActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_task_title"
            android:hint="@string/new_task_title_hint"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_task_description"
            android:layout_below="@id/new_task_title"
            android:hint="@string/new_task_description_hint"
            android:lines="1"
            android:maxLines="5"
            android:gravity="top"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_task_description"
            android:id="@+id/new_task_deadline_container"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="Deadline:"
                android:textSize="@dimen/task_title_size"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/deadline"
                android:text="dd/mm/jjjj"
                android:textSize="@dimen/task_title_size"
                android:gravity="center_vertical"/>

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="Deadline"
                android:id="@+id/pick_deadline"
                android:background="@drawable/date_picker_background"/>

        </LinearLayout>

        <Button
            android:id="@+id/add_task_button"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/button_padding"
            android:layout_below="@id/new_task_deadline_container"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:background="@drawable/main_button_shape"
            android:text="@string/action_add_task"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</ScrollView>
